[package]
name = "rsimg"
version = "0.1.0"
edition = "2024"
authors = ["Andrea JB"]
description = "Rust-powered image optimizer with parallel processing"

[dependencies]
rayon = "1.8"
image = "0.25"
webp = "0.2"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
owo-colors = "4.0"
anyhow = "1.0"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
